# wdbo_algo

./: .gitignore  LICENCE  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
src/wdbo_algo/: main.py  model.py  optimizer.py
src/wdbo_algo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
