[build-system]
requires = ["setuptools>=42", "wdbo_criterion", "gpytorch", "torch", "botorch"]
build-backend = "setuptools.build_meta"

[project]
name = "wdbo_algo"
version = "1.0.0"
authors = [
  { name="Anthony Bardou", email="anthony.bardou@epfl.ch" },
]
description = "W-DBO Algotithm for Dynamic Bayesian Optimization"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/WDBO-ALGORITHM/wdbo_algo"
W_DBO_criterion = "https://github.com/WDBO-ALGORITHM/wdbo_criterion"
