[build-system]
requires = ["setuptools>=58"]
build-backend = "setuptools.build_meta"

[project]
name = "wdbo_algo"
version = "1.0.7"
authors = [
  { name="Anthony Bardou", email="anthony.bardou@epfl.ch" },
]
description = "W-DBO Algotithm for Dynamic Bayesian Optimization"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
  "wdbo_criterion",
    "gpytorch",
    "torch",
    "botorch"
]

[project.urls]
Project = "https://github.com/WDBO-ALGORITHM"
